FKDK-990 Fix scroll on Safari browser.

--- a/public_html/profiles/os2sub/themes/custom/site_fic/src/scss/custom/components/_modal-popup.scss
+++ b/public_html/profiles/os2sub/themes/custom/site_fic/src/scss/custom/components/_modal-popup.scss
@@ -22,6 +22,7 @@
   overflow-y: scroll;
   bottom: 0;
   right: 0;
+  overflow-scrolling: touch;
 }
 
 div.ctools-modal-content {
